--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -70,6 +70,7 @@
     padding: 1rem;
     box-sizing: inherit;
     position: relative;
+    margin-top: 20%;
   }
 
   .angular-logo {
@@ -124,6 +125,12 @@
     line-height: 1.4rem;
     letter-spacing: -0.00875rem;
     text-decoration: none;
+    width: 200px;
+  }
+
+  .right-icon {
+    margin-left: auto;
+    margin-right: 0;
   }
 
   .pill:hover {
@@ -225,8 +232,9 @@
           <clipPath id="a"><path fill="#fff" d="M0 0h982v239H0z" /></clipPath>
         </defs>
       </svg>
-      <h1>Hello, {{ title }}</h1>
-      <p>Congratulations! Your app is running. 🎉</p>
+      <h1>Welcome!</h1>
+      <p>PikachuCards.com is under maintanence,<br/>but exciting new things are coming.</p>
+      <p>Stay tuned! 🎉⚡</p>
     </div>
     <div class="divider" role="separator" aria-label="Divider"></div>
     <div class="right-side">
@@ -245,17 +253,19 @@
             rel="noopener"
           >
             <span>{{ item.title }}</span>
-            <svg
+            <span class="right-icon">
+              <svg
               xmlns="http://www.w3.org/2000/svg"
               height="14"
               viewBox="0 -960 960 960"
               width="14"
               fill="currentColor"
-            >
-              <path
-                d="M200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h280v80H200v560h560v-280h80v280q0 33-23.5 56.5T760-120H200Zm188-212-56-56 372-372H560v-80h280v280h-80v-144L388-332Z"
-              />
-            </svg>
+              >
+                <path
+                  d="M200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h280v80H200v560h560v-280h80v280q0 33-23.5 56.5T760-120H200Zm188-212-56-56 372-372H560v-80h280v280h-80v-144L388-332Z"
+                />
+              </svg>
+            </span>
           </a>
         }
       </div>
